--- a/home.html
+++ b/home.html
@@ -7,5 +7,7 @@
 <body>
     <h1>THis is home page</h1>
     <p>This is updated paragraph in this file</p>
+    <hr>
+    <p>This is content of feature one branch</p>
 </body>
 </html>
