--- a/home.html
+++ b/home.html
@@ -9,5 +9,6 @@
     <p>This is updated paragraph in this file</p>
     <hr>
     <p>This is content of feature one branch</p>
+    <p>This is updated in github side</p>
 </body>
 </html>
