--- a/home.html
+++ b/home.html
@@ -10,5 +10,6 @@
     <hr>
     <p>This is content of feature one branch</p>
     <p>This is updated in github side</p>
+    <p> This is feature two branch also</p>
 </body>
 </html>
