some dummy text added

--- a/home.html
+++ b/home.html
@@ -11,5 +11,6 @@
     <p>This is content of feature one branch</p>
     <p>This is updated in github side</p>
     <p> This is feature two branch also</p>
+    <P> This is some text added in feature branch two</P>
 </body>
 </html>
