--- a/home.html
+++ b/home.html
@@ -7,5 +7,6 @@
 <body>
     <h1>THis is home page</h1>
     <p>This is updated paragraph in this file</p>
+    <p> test for revert feature</p>
 </body>
 </html>
